--- a/summaries/15.html
+++ b/summaries/15.html
@@ -1,5 +1,5 @@
 <p>
-    Poverty rates across the United States reveal notable disparities, with some states experiencing significantly higher levels of economic hardship than others. Data from a recent analysis highlights the range of poverty levels, from states with minimal poverty to those with much higher rates.
+    Poverty rates across the United States reveal notable disparities, with some states experiencing significantly higher levels of economic hardship than others.
 </p>
 
 <p>
