--- a/summaries/9.html
+++ b/summaries/9.html
@@ -1,9 +1,21 @@
-<p>New data from the U.S. Census Bureau highlights a significant disparity in median household incomes (MHI) across the nation’s Core-Based Statistical Areas (CBSAs), encompassing both metro and micro areas. The analysis of 927 CBSAs reveals a stark divide between the highest and lowest income regions.</p>
+<h2>Understanding Median Household Income Across U.S. CBSAs</h2>
+<p>Median household income is a crucial economic indicator that highlights financial well-being across different regions. This dataset provides insights into income distribution across various Core-Based Statistical Areas (CBSAs) in the United States, showcasing regional economic strengths and disparities.</p>
 
-<p>The San Jose-Sunnyvale-Santa Clara, CA Metro Area, home to Silicon Valley, tops the list with a median household income of $151,713. It is followed by the Los Alamos, NM Micro Area ($135,801), and the San Francisco-Oakland-Berkeley, CA Metro Area ($129,315). These areas are well-known for their concentration of tech industries and high-paying jobs.</p>
+<h2>High-Income and Low-Income Regions</h2>
+<p>At the top of the income spectrum is the <strong>San Jose-Sunnyvale-Santa Clara, CA Metro Area</strong>, boasting a median household income of <strong>$151,713</strong>. This region benefits from a high concentration of technology firms and skilled labor, resulting in significantly higher wages.</p>
+<p>On the other end, <strong>Middlesborough, KY Micro Area</strong> records the lowest median income at <strong>$33,658</strong>. Many lower-income areas are characterized by smaller populations, limited economic diversification, and a higher dependency on industries that have declined over time.</p>
 
-<p>On the other end of the spectrum, the Middlesborough, KY Micro Area reports the lowest MHI at $33,658, alongside regions like Minden, LA ($34,263) and Bennettsville, SC ($34,275). These areas, predominantly rural, face economic challenges and limited access to high-wage employment opportunities.</p>
+<h2>Regional Economic Trends</h2>
+<p>Income levels tend to be higher in states with strong technology, finance, and government employment sectors. Areas such as <strong>Washington-Arlington-Alexandria, DC-VA-MD-WV Metro Area</strong> and <strong>Boston-Cambridge-Newton, MA-NH Metro Area</strong> reflect this trend with robust incomes.</p>
+<p>Conversely, CBSAs in the Appalachian region, the Deep South, and parts of the Midwest tend to have lower median household incomes. States such as <strong>Mississippi, West Virginia, and Alabama</strong> feature several lower-income micro areas where economic challenges persist.</p>
 
-<p>Regional trends are evident in the data. The West Coast dominates the high-income bracket, driven by tech hubs and urban prosperity, while the Northeast also features prominently due to its mix of metropolitan areas and affluent suburbs. In contrast, the South and parts of the Midwest tend to have lower median incomes, with rural economies and smaller population centers contributing to the disparity. The Mountain West shows a mix of high and low incomes, reflecting the contrast between growing urban areas and more isolated rural communities.</p>
+<h2>Key Observations</h2>
+<ul>
+<li><strong>Technology and finance hubs command higher incomes:</strong> Regions like Silicon Valley and Washington, D.C. consistently outperform due to high-paying job markets.</li>
+<li><strong>Cost of living plays a role:</strong> Although metro areas report higher incomes, higher living costs often offset financial advantages.</li>
+<li><strong>Smaller metro areas with strong industries:</strong> Cities like Bloomington, IL, exhibit relatively high incomes due to stable industries and government employment.</li>
+<li><strong>Rural areas lag:</strong> Many micro areas still struggle with lower wages, fewer job opportunities, and slower economic growth.</li>
+</ul>
 
-<p>This snapshot of America’s economic landscape highlights the diverse economic realities across regions and the significant income gaps between urban and rural areas.</p>
+<h2>Final Thoughts</h2>
+<p>This dataset underscores the varying economic landscapes across the U.S. While some regions thrive with high-wage industries, others face financial challenges due to historical and economic factors. Understanding these trends helps contextualize broader economic discussions and regional prosperity.</p>
